name:                dlambda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/axch/dlambda#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Radul
maintainer:          axch@mit.edu
copyright:           2017 Alexey Radul
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eval, Exp
  build-depends:       base >= 4.7 && < 5
                     , hvect
  default-language:    Haskell2010

test-suite dlambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ad
                     , dlambda
                     , hvect
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/axch/dlambda
